bisonflex/reginit/reginit.output
Grammar

    0 $accept: top $end

    1 top: statements

    2 statements: /* empty */
    3           | statements statement

    4 statement: SET expression EQUAL expression SEMICOLON

    5 number: HEXVALUE
    6       | DECVALUE
    7       | LPAREN expression RPAREN

    8 unary_expression: number
    9                 | PLUS unary_expression
   10                 | NEGATION unary_expression

   11 multiplicative_expression: unary_expression
   12                          | multiplicative_expression MULT unary_expression
   13                          | multiplicative_expression DIVIDE unary_expression
   14                          | multiplicative_expression MODULO unary_expression

   15 additive_expression: multiplicative_expression
   16                    | additive_expression PLUS multiplicative_expression
   17                    | additive_expression MINUS multiplicative_expression

   18 shift_expression: additive_expression
   19                 | shift_expression LSHIFT additive_expression
   20                 | shift_expression RSHIFT additive_expression

   21 and_expression: shift_expression
   22               | and_expression AND shift_expression

   23 xor_expression: and_expression
   24               | xor_expression XOR and_expression

   25 expression: xor_expression
   26           | expression OR xor_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
SET (258) 4
OR (259) 26
XOR (260) 24
AND (261) 22
MULT (262) 12
DIVIDE (263) 13
MODULO (264) 14
PLUS (265) 9 16
MINUS (266) 17
LSHIFT (267) 19
RSHIFT (268) 20
NEGATION (269) 10
LPAREN (270) 7
RPAREN (271) 7
EQUAL (272) 4
SEMICOLON (273) 4
DECVALUE (274) 6
HEXVALUE (275) 5


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
top (22)
    on left: 1, on right: 0
statements (23)
    on left: 2 3, on right: 1 3
statement (24)
    on left: 4, on right: 3
number (25)
    on left: 5 6 7, on right: 8
unary_expression (26)
    on left: 8 9 10, on right: 9 10 11 12 13 14
multiplicative_expression (27)
    on left: 11 12 13 14, on right: 12 13 14 15 16 17
additive_expression (28)
    on left: 15 16 17, on right: 16 17 18 19 20
shift_expression (29)
    on left: 18 19 20, on right: 19 20 21 22
and_expression (30)
    on left: 21 22, on right: 22 23 24
xor_expression (31)
    on left: 23 24, on right: 24 25 26
expression (32)
    on left: 25 26, on right: 4 7 26


State 0

    0 $accept: . top $end

    $default  reduce using rule 2 (statements)

    top         go to state 1
    statements  go to state 2


State 1

    0 $accept: top . $end

    $end  shift, and go to state 3


State 2

    1 top: statements .
    3 statements: statements . statement

    SET  shift, and go to state 4

    $default  reduce using rule 1 (top)

    statement  go to state 5


State 3

    0 $accept: top $end .

    $default  accept


State 4

    4 statement: SET . expression EQUAL expression SEMICOLON

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 15
    and_expression             go to state 16
    xor_expression             go to state 17
    expression                 go to state 18


State 5

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 6

    9 unary_expression: PLUS . unary_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number            go to state 11
    unary_expression  go to state 19


State 7

   10 unary_expression: NEGATION . unary_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number            go to state 11
    unary_expression  go to state 20


State 8

    7 number: LPAREN . expression RPAREN

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 15
    and_expression             go to state 16
    xor_expression             go to state 17
    expression                 go to state 21


State 9

    6 number: DECVALUE .

    $default  reduce using rule 6 (number)


State 10

    5 number: HEXVALUE .

    $default  reduce using rule 5 (number)


State 11

    8 unary_expression: number .

    $default  reduce using rule 8 (unary_expression)


State 12

   11 multiplicative_expression: unary_expression .

    $default  reduce using rule 11 (multiplicative_expression)


State 13

   12 multiplicative_expression: multiplicative_expression . MULT unary_expression
   13                          | multiplicative_expression . DIVIDE unary_expression
   14                          | multiplicative_expression . MODULO unary_expression
   15 additive_expression: multiplicative_expression .

    MULT    shift, and go to state 22
    DIVIDE  shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 15 (additive_expression)


State 14

   16 additive_expression: additive_expression . PLUS multiplicative_expression
   17                    | additive_expression . MINUS multiplicative_expression
   18 shift_expression: additive_expression .

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26

    $default  reduce using rule 18 (shift_expression)


State 15

   19 shift_expression: shift_expression . LSHIFT additive_expression
   20                 | shift_expression . RSHIFT additive_expression
   21 and_expression: shift_expression .

    LSHIFT  shift, and go to state 27
    RSHIFT  shift, and go to state 28

    $default  reduce using rule 21 (and_expression)


State 16

   22 and_expression: and_expression . AND shift_expression
   23 xor_expression: and_expression .

    AND  shift, and go to state 29

    $default  reduce using rule 23 (xor_expression)


State 17

   24 xor_expression: xor_expression . XOR and_expression
   25 expression: xor_expression .

    XOR  shift, and go to state 30

    $default  reduce using rule 25 (expression)


State 18

    4 statement: SET expression . EQUAL expression SEMICOLON
   26 expression: expression . OR xor_expression

    OR     shift, and go to state 31
    EQUAL  shift, and go to state 32


State 19

    9 unary_expression: PLUS unary_expression .

    $default  reduce using rule 9 (unary_expression)


State 20

   10 unary_expression: NEGATION unary_expression .

    $default  reduce using rule 10 (unary_expression)


State 21

    7 number: LPAREN expression . RPAREN
   26 expression: expression . OR xor_expression

    OR      shift, and go to state 31
    RPAREN  shift, and go to state 33


State 22

   12 multiplicative_expression: multiplicative_expression MULT . unary_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number            go to state 11
    unary_expression  go to state 34


State 23

   13 multiplicative_expression: multiplicative_expression DIVIDE . unary_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number            go to state 11
    unary_expression  go to state 35


State 24

   14 multiplicative_expression: multiplicative_expression MODULO . unary_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number            go to state 11
    unary_expression  go to state 36


State 25

   16 additive_expression: additive_expression PLUS . multiplicative_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 37


State 26

   17 additive_expression: additive_expression MINUS . multiplicative_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 38


State 27

   19 shift_expression: shift_expression LSHIFT . additive_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 39


State 28

   20 shift_expression: shift_expression RSHIFT . additive_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 40


State 29

   22 and_expression: and_expression AND . shift_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 41


State 30

   24 xor_expression: xor_expression XOR . and_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 15
    and_expression             go to state 42


State 31

   26 expression: expression OR . xor_expression

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 15
    and_expression             go to state 16
    xor_expression             go to state 43


State 32

    4 statement: SET expression EQUAL . expression SEMICOLON

    PLUS      shift, and go to state 6
    NEGATION  shift, and go to state 7
    LPAREN    shift, and go to state 8
    DECVALUE  shift, and go to state 9
    HEXVALUE  shift, and go to state 10

    number                     go to state 11
    unary_expression           go to state 12
    multiplicative_expression  go to state 13
    additive_expression        go to state 14
    shift_expression           go to state 15
    and_expression             go to state 16
    xor_expression             go to state 17
    expression                 go to state 44


State 33

    7 number: LPAREN expression RPAREN .

    $default  reduce using rule 7 (number)


State 34

   12 multiplicative_expression: multiplicative_expression MULT unary_expression .

    $default  reduce using rule 12 (multiplicative_expression)


State 35

   13 multiplicative_expression: multiplicative_expression DIVIDE unary_expression .

    $default  reduce using rule 13 (multiplicative_expression)


State 36

   14 multiplicative_expression: multiplicative_expression MODULO unary_expression .

    $default  reduce using rule 14 (multiplicative_expression)


State 37

   12 multiplicative_expression: multiplicative_expression . MULT unary_expression
   13                          | multiplicative_expression . DIVIDE unary_expression
   14                          | multiplicative_expression . MODULO unary_expression
   16 additive_expression: additive_expression PLUS multiplicative_expression .

    MULT    shift, and go to state 22
    DIVIDE  shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 16 (additive_expression)


State 38

   12 multiplicative_expression: multiplicative_expression . MULT unary_expression
   13                          | multiplicative_expression . DIVIDE unary_expression
   14                          | multiplicative_expression . MODULO unary_expression
   17 additive_expression: additive_expression MINUS multiplicative_expression .

    MULT    shift, and go to state 22
    DIVIDE  shift, and go to state 23
    MODULO  shift, and go to state 24

    $default  reduce using rule 17 (additive_expression)


State 39

   16 additive_expression: additive_expression . PLUS multiplicative_expression
   17                    | additive_expression . MINUS multiplicative_expression
   19 shift_expression: shift_expression LSHIFT additive_expression .

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26

    $default  reduce using rule 19 (shift_expression)


State 40

   16 additive_expression: additive_expression . PLUS multiplicative_expression
   17                    | additive_expression . MINUS multiplicative_expression
   20 shift_expression: shift_expression RSHIFT additive_expression .

    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26

    $default  reduce using rule 20 (shift_expression)


State 41

   19 shift_expression: shift_expression . LSHIFT additive_expression
   20                 | shift_expression . RSHIFT additive_expression
   22 and_expression: and_expression AND shift_expression .

    LSHIFT  shift, and go to state 27
    RSHIFT  shift, and go to state 28

    $default  reduce using rule 22 (and_expression)


State 42

   22 and_expression: and_expression . AND shift_expression
   24 xor_expression: xor_expression XOR and_expression .

    AND  shift, and go to state 29

    $default  reduce using rule 24 (xor_expression)


State 43

   24 xor_expression: xor_expression . XOR and_expression
   26 expression: expression OR xor_expression .

    XOR  shift, and go to state 30

    $default  reduce using rule 26 (expression)


State 44

    4 statement: SET expression EQUAL expression . SEMICOLON
   26 expression: expression . OR xor_expression

    OR         shift, and go to state 31
    SEMICOLON  shift, and go to state 45


State 45

    4 statement: SET expression EQUAL expression SEMICOLON .

    $default  reduce using rule 4 (statement)
